# selftraining

./: .gitattributes  .gitignore  README.md
apache/camel-k/: Sample.java  sample.properties
bpmn/: rome_invasion.bpmn  watchmunster.bpmn
bpmn/JsWorker/: DecideOnExpansionWorker.js  package-lock.json  package.json
camunda/: diagram_1.bpmn  diagram_2.bpmn
cplusplus/: CoderByte.h  empleado.cpp  pruebas.cpp  string.cpp
docker/: docker-compose.yml
hackerrank/: 30 Days of Code.cpp
hackerrank/C++/: Arrays Introduction.cpp  Basic Data Types.cpp  Class.cpp  Classes and Objects.cpp  Conditional Statements.cpp  For Loop.cpp  Functions.cpp  Input and Output.cpp  Pointer.cpp  Say Hello, World! With C++.cpp  StringStream.cpp  Strings.cpp  Structs.cpp  Variable Sized Arrays.cpp  Virtual Functions.cpp
hackerrank/Java/: Java Anagrams.java  Java Datatypes.java  Java Date and Time.java  Java End-of-file.java  Java If-Else.java  Java Loops I.java  Java Output Formatting.java  Java Static Initializer Block.java  Java Stdin and Stdout II.java  Java String Reverse.java  Java String Tokens.java  Java Strings Introduction.java  (+3 more)
haskell/: greetings.hs  memoization.hs  printoften.hs
postman/: Selftraining.postman_collection.json
rust/crypto_prices/: Cargo.toml
rust/crypto_prices/src/: lib.rs
rust/crypto_prices/webapp/: index.html
rust/youtube_search/: Cargo.toml
rust/youtube_search/src/: env.rs  main.rs  youtube.rs
soapui/: FirstRestProject-soapui-project.xml  FirstRestWADLProject-soapui-project.xml  FirstSoapUIProject-soapui-project.xml
spring/: LearningPath.txt
(+537 files in other folders)
