[package]
name = "youtube_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
web-sys = { version ="0.3.64", features = ["Event", "InputEvent"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
gloo-net = "0.4.0"
serde = { version = "1.0.188", features = ["derive"] }